fixing letterspacing in show page

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -80,7 +80,7 @@
     color: #004056;
     font-weight: bold;
     // text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
-    letter-spacing: 5px;
+    letter-spacing: 2px;
   }
 }
 
